# valhalla_flutter

./: .gitignore  .gitmodules  ATTRIBUTION.md  README.md  compile_commands.json  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/valhalla_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: config.dart  main.dart
ios/: valhalla_flutter.podspec
ios/Classes/: valhalla_flutter.cpp
lib/: valhalla_flutter.dart  valhalla_flutter_bindings_generated.dart
src/: CMakeLists.txt  valhalla_actor.cpp  valhalla_actor.h  vcpkg.json
